Stop the banner pipeline from being triggered if it is already active.

This is a speculative fix for crbug.com/736045. If we tip over the
engagement threshold while the app banner pipeline is active, and we've
already started the banenr checking due to the onload experiment, we
could get into a state where RequestAppBanner is called but we haven't
stopped the previous run.

This CL guards all calls to RequestAppBanner on the banner pipeline not
being active.

BUG=736045

Review-Url: https://codereview.chromium.org/2958473002
Cr-Commit-Position: refs/heads/master@{#482103}

Former-commit-id: 339d7dc9d0e5c64329105314a52413025b18b89c